backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: query-panel
spec:
  selector:
    matchLabels:
      app: query-panel-backend
  template:
    metadata:
      labels:
        app: query-panel-backend
    spec:
      containers:
      - name: backend
        #image:  683819934378.dkr.ecr.us-east-1.amazonaws.com/query-panel:imag-api 
        image: soniagurramavari/query-panel-backend:v1 # ECR Image# ECR frontend image name
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: query-panel
spec:
  selector:
    app: query-panel-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  #type: NodePort
  #type: LoadBalancer
  type: ClusterIP
