mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: query-panel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          #image: 683819934378.dkr.ecr.us-east-1.amazonaws.com/query-panel:mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc # Reference your PVC here

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: query-panel
spec:
  selector:
    app: mongo
  type: NodePort
  #type: LoadBalancer
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      #nodePort: 30017
