mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: query-panel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          #image: 683819934378.dkr.ecr.us-east-1.amazonaws.com/query-panel:mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc # Reference your PVC here

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: query-panel
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306           # Port inside the cluster
      targetPort: 3306     # MySQL container port
  type: NodePort
